fix(ui): alterar scrollbar global para valor initial

--- a/packages/frontend-webapp/shared/core.css
+++ b/packages/frontend-webapp/shared/core.css
@@ -403,7 +403,7 @@ body {
 
 /* Scrollbar fina global */
 * {
-    scrollbar-width: thin;
+    scrollbar-width: initial;
 }
 
 *::-webkit-scrollbar {
